Fix white gap between photos

--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,7 @@ section {
 }
 
 .hover-box img {
+  display: block;
   width: 100%;
   filter: grayscale(100%);
   transition: all .2s linear;
